--- a/Tooly/Pages/Index.razor
+++ b/Tooly/Pages/Index.razor
@@ -2,8 +2,12 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Tooly</h1>
 
-Welcome to your new app.
+<p>
+    A collection of small tools I've written majorly for myself
+</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>
+    Find me <a target="_blank" href="http://shrayas.com">here</a>
+</p>
