--- a/Tooly/Shared/MainLayout.razor
+++ b/Tooly/Shared/MainLayout.razor
@@ -1,17 +1,30 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <ul class="mt-2 nav nav-pills flex-column">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href=""  Match="NavLinkMatch.All">
+                        Home
+                    </NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="PGCopyGenerator">
+                        PostgreSQL <code>copy</code> command generator
+                    </NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="PGTableGenerator">
+                        PostgreSQL table generator
+                    </NavLink>
+                </li>
+            </ul>
         </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+        <div class="col">
+            <div class="mt-2">
+                @Body
+            </div>
+        </div>
+    </div>
 </div>
