--- a/Tooly/Shared/MainLayout.razor
+++ b/Tooly/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-3">
+        <div class="col-2">
             <ul class="mt-2 nav nav-pills flex-column">
                 <li class="nav-item">
                     <NavLink class="nav-link" href=""  Match="NavLinkMatch.All">
@@ -11,19 +11,17 @@
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="PGCopyGenerator">
-                        PostgreSQL <code>copy</code> command generator
+                        PG <code>\copy</code> generator
                     </NavLink>
                 </li>
-                @*
                 <li class="nav-item">
                     <NavLink class="nav-link" href="PGTableGenerator">
-                        PostgreSQL table generator
+                        PG table generator
                     </NavLink>
                 </li>
-                *@
             </ul>
         </div>
-        <div class="col">
+        <div class="col-10">
             <div class="mt-2">
                 @Body
             </div>
