--- a/Tooly/Pages/PGCopyGenerator.razor
+++ b/Tooly/Pages/PGCopyGenerator.razor
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <h1>PostgreSQL <code>copy</code> Command Generator</h1>
+        <h1>PostgreSQL <code>\copy</code> Command Generator</h1>
     </div>
 </div>
 
